{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 1008,
  "lineage": "48c40786-b76e-e9e7-8e7d-ab57df87e4c6",
  "resources": [
    {
      "module": "module.vpc.module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0a97a720823cd7192",
            "owner_id": "218619999254",
            "tags": {
              "Name": "ram-igw"
            },
            "vpc_id": "vpc-06206719b44b677d9"
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.route",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a97a720823cd7192",
            "id": "r-rtb-0977dcc14e6e3254d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0977dcc14e6e3254d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.route",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0977dcc14e6e3254d",
            "owner_id": "218619999254",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ram-public-rt"
            },
            "vpc_id": "vpc-06206719b44b677d9"
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.route",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00367d91d56e5c0b2",
            "route_table_id": "rtb-0977dcc14e6e3254d",
            "subnet_id": "subnet-0eca0ef017a67a296"
          },
          "depends_on": [
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.route",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc12dc346c353434",
            "route_table_id": "rtb-0977dcc14e6e3254d",
            "subnet_id": "subnet-0ac68093dfc7cb205"
          },
          "depends_on": [
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ram_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218619999254:security-group/sg-098122151c7954b48",
            "description": "security group for restrict the access for different protocols",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098122151c7954b48",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ram_sg",
            "name_prefix": null,
            "owner_id": "218619999254",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": ""
            },
            "timeouts": null,
            "vpc_id": "vpc-06206719b44b677d9"
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218619999254:subnet/subnet-0365a3132c1693930",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "25.10.2.0/24",
            "id": "subnet-0365a3132c1693930",
            "map_public_ip_on_launch": false,
            "owner_id": "218619999254",
            "tags": {
              "Name": "ram-private-subnet1"
            },
            "vpc_id": "vpc-06206719b44b677d9"
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218619999254:subnet/subnet-04deadfea0c48500c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "25.10.3.0/24",
            "id": "subnet-04deadfea0c48500c",
            "map_public_ip_on_launch": false,
            "owner_id": "218619999254",
            "tags": {
              "Name": "ram-private-subnet2"
            },
            "vpc_id": "vpc-06206719b44b677d9"
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218619999254:subnet/subnet-0eca0ef017a67a296",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "25.10.0.0/24",
            "id": "subnet-0eca0ef017a67a296",
            "map_public_ip_on_launch": true,
            "owner_id": "218619999254",
            "tags": {
              "Name": "ram-public-subnet1"
            },
            "vpc_id": "vpc-06206719b44b677d9"
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218619999254:subnet/subnet-0ac68093dfc7cb205",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "25.10.1.0/24",
            "id": "subnet-0ac68093dfc7cb205",
            "map_public_ip_on_launch": true,
            "owner_id": "218619999254",
            "tags": {
              "Name": "ram-public-subnet2"
            },
            "vpc_id": "vpc-06206719b44b677d9"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ram",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218619999254:vpc/vpc-06206719b44b677d9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "25.10.0.0/16",
            "default_network_acl_id": "acl-0455ce242ae66e14b",
            "default_route_table_id": "rtb-064ef493051483084",
            "default_security_group_id": "sg-04a654a00756db72d",
            "dhcp_options_id": "dopt-fe15049c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06206719b44b677d9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-064ef493051483084",
            "owner_id": "218619999254",
            "tags": {
              "Name": "ram-vpc"
            }
          }
        }
      ]
    }
  ]
}